# docs/swagger.json
@@ -12,6 +12,52 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
+        "/user/add": {
+            "post": {
+                "description": "add user",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "adding new user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "enter the name",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "enter the family",
+                        "name": "family",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "image",
+                        "name": "file_data",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/userdetail": {
             "post": {
                 "description": "do ping",
